chore: update Dockerfile for custom JRE and build process