@@ -1,15 +1,36 @@
-FROM eclipse-temurin:21-jdk
+# Dockerfile
+# 1) 커스텀 JRE 생성(glibc 계열로 통일)
+FROM bellsoft/liberica-runtime-container:jdk-all-cds-slim AS builder-jre
+RUN $JAVA_HOME/bin/jlink \
+    --module-path "$JAVA_HOME/jmods" \
+    --add-modules ALL-MODULE-PATH \
+    --strip-debug \
+    --compress=2 \
+    --output /custom-jre
 
-WORKDIR /app
+# 2) 애플리케이션 빌드
+FROM gradle:9.0-jdk21-jammy AS builder
 
-COPY . .
+# 의존성 캐시 단계
+COPY build.gradle .
+COPY settings.gradle .
+COPY gradle gradle/
 
-RUN chmod +x ./gradlew
+RUN gradle dependencies
 
-RUN ./gradlew clean build -x test
+# 소스 빌드
+COPY src ./src
+RUN gradle bootJar --no-daemon
 
-COPY src/main/resources/application*.yml /app/config/
+# 3) 실행 이미지
+FROM alpine:3.22.1
+ENV JAVA_HOME=/opt/java
+ENV PATH="${JAVA_HOME}/bin:${PATH}"
+
+COPY --from=builder-jre /custom-jre /opt/java
+
+# Spring Boot 기본 설정상 단일 부트 JAR만 생성된다는 가정
+COPY --from=builder /home/gradle/build/libs/*.jar /app.jar
 
 EXPOSE 8080
-
-ENTRYPOINT ["java", "-jar", "build/libs/backend-0.0.1-SNAPSHOT.jar", "--spring.config.additional-location=optional:file:/app/config/"]
+ENTRYPOINT ["java","-jar","/app.jar"]
